More complete documentation

--- a/notebooks/KaggleDonorsChoose.ipynb
+++ b/notebooks/KaggleDonorsChoose.ipynb
@@ -4,7 +4,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Recommender for DonorsChoose.org"
+    "# DonorsChoose.org exploratory data analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Prerequisite: [data](https://www.kaggle.com/donorschoose/datasets) have been downloaded into the data directory, and files have been gzipped"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 1346768\r\n",
+      "drwxr-xr-x  8 root root       256 Jun 10 14:29 \u001b[0m\u001b[01;34m.\u001b[0m/\r\n",
+      "drwxr-xr-x 45 root root      4096 Jun 10 15:22 \u001b[01;34m..\u001b[0m/\r\n",
+      "-rwxr-xr-x  1 root root 248649041 May 14 17:28 \u001b[01;32mDonations.csv.gz\u001b[0m*\r\n",
+      "-rwxr-xr-x  1 root root  54034301 May 14 17:27 \u001b[01;32mDonors.csv.gz\u001b[0m*\r\n",
+      "-rwxr-xr-x  1 root root 813408699 May 14 17:27 \u001b[01;32mProjects.csv.gz\u001b[0m*\r\n",
+      "-rwxr-xr-x  1 root root 223356307 May 14 17:27 \u001b[01;32mResources.csv.gz\u001b[0m*\r\n",
+      "-rwxr-xr-x  1 root root   3550946 May 14 17:28 \u001b[01;32mSchools.csv.gz\u001b[0m*\r\n",
+      "-rwxr-xr-x  1 root root   9033218 May 14 17:27 \u001b[01;32mTeachers.csv.gz\u001b[0m*\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls -al /data"
    ]
   },
   {
@@ -31,7 +63,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
