Minor addition in notebook

--- a/notebooks/KaggleDonorsChoose.ipynb
+++ b/notebooks/KaggleDonorsChoose.ipynb
@@ -807,8 +807,11 @@
     "- Obvious: help match donors to projects (recommender)\n",
     "    - For a given project, find the best donors\n",
     "    - For a given donor, find the best projects\n",
-    "- Help teachers find other teachers with similar issues (community building)\n",
-    "    - by analyzing the contents of their projects"
+    "- Help teachers find other teachers (in the neighborhood?) with similar projects (community building)\n",
+    "    - by analyzing the contents of their projects\n",
+    "    - so they can group purchases, and can get volume discounts\n",
+    "    - so they can exchange ideas about potential follow-up projects\n",
+    "    "
    ]
   },
   {
